# porcentagem_cespe

./: .gitignore  README.md  pyproject.toml
data/: AFO.xlsx  AGENTS.md  AdmGeralPublica.xlsx  DConst.xlsx  DireitoAdm.xlsx  Etica.xlsx  GestaoProjetos.xlsx  Port_RedOficial.xlsx  adm_de_recursos_materiais.xlsx  convert_excels_to_csv.py  todsass.xlsx
datasets/: dataset_cespe.csv  dataset_cespe.parquet
datasets/por_disciplina/: Administra_o_Geral_e_P_blica.csv  Administra_o_de_Recursos_Materiais.csv  Administração_Financeira_e_Orçamentária.csv  Direito_Administrativo.csv  Direito_Constitucional.csv  Gestão_de_Projetos_PMBOK.csv  Língua_Portuguesa_e_Redação_Oficial.csv  tica_no_Servi_o_P_blico.csv
docs/: DATASET.md  HIERARQUIA_DADOS.md
scripts/: criar_dataset.py  validar_dataset.py  validar_hierarquia.py
src/porcentagem_cespe/: __init__.py  __main__.py  analisador.py  cli.py  constants.py  models.py  validador.py
tests/: __init__.py  test_models.py  test_validador.py
